# cubicpts

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
cubicpts/: __init__.py  bu.py  diagonal.pyx  nth.pxd  nth.pyx  run.py  tools.py  tr_linear.pyx
cubicpts/diagonal/: io128.cpp  io128.h  ntheory.cpp  ntheory.h  numbergenerator.cpp  numbergenerator.h  points_diagonal.cpp  points_diagonal.h  precomputed_roots.cpp  precomputed_roots.h  wrapper.pxd
cubicpts/tr_quadratic/: __init__.py  counting.pyx  tools.py
tests/: manual_test.py  test_bu.py  test_diagonal.py  test_nth.py  test_tr_linear.py
